cleanuo known failures

--- a/tests/known_failures.yaml
+++ b/tests/known_failures.yaml
@@ -3,7 +3,6 @@ ANY:
   ALL:
     hipDeviceMalloc: 'Failed'
     TestUndefKernelArg: 'Intermittend L0 segfault'
-    Unit_hipMemFaultStackAllocation_Check: 'Missing managed memory checks'
     hipPromoteInt-signed_constant_compare: 'constVal used for signed comparison'
     Unit_hipGraph_SimpleGraphWithKernel: 'Temp disabled graphs'
     Unit_hipStreamBeginCapture_BasicFunctional: 'Temp disabled graphs'
@@ -32,71 +31,6 @@ ANY:
     TestIndirectCall: ''
     Unit_HMM_OverSubscriptionTst: ''
     Unit_hipGraphAddKernelNode_Negative: 'Invalid test'
-    Unit_deviceFunctions_CompileTest___double2float_rd_float: 'Missing definition/implementation for __double2float_rd'
-    Unit_deviceFunctions_CompileTest___double2float_rn_float: 'Missing definition/implementation for __double2float_rn'
-    Unit_deviceFunctions_CompileTest___double2float_ru_float: 'Missing definition/implementation for __double2float_ru'
-    Unit_deviceFunctions_CompileTest___double2float_rz_float: 'Missing definition/implementation for __double2float_rz'
-    Unit_deviceFunctions_CompileTest___double2hiint_int: 'Missing definition/implementation for __double2hiint'
-    Unit_deviceFunctions_CompileTest___double2int_rd_int: 'Missing definition/implementation for __double2int_rd'
-    Unit_deviceFunctions_CompileTest___double2int_rn_int: 'Missing definition/implementation for __double2int_rn'
-    Unit_deviceFunctions_CompileTest___double2int_ru_int: 'Missing definition/implementation for __double2int_ru'
-    Unit_deviceFunctions_CompileTest___double2int_rz_int: 'Missing definition/implementation for __double2int_rz'
-    Unit_deviceFunctions_CompileTest___double2ll_rd_longlong: 'Missing definition/implementation for __double2ll_rd'
-    Unit_deviceFunctions_CompileTest___double2ll_rn_longlong: 'Missing definition/implementation for __double2ll_rn'
-    Unit_deviceFunctions_CompileTest___double2ll_ru_longlong: 'Missing definition/implementation for __double2ll_ru'
-    Unit_deviceFunctions_CompileTest___double2ll_rz_longlong: 'Missing definition/implementation for __double2ll_rz'
-    Unit_deviceFunctions_CompileTest___double2loint_int: 'Missing definition/implementation for __double2loint'
-    Unit_deviceFunctions_CompileTest___double2uint_rd_unsigned: 'Missing definition/implementation for __double2uint_rd'
-    Unit_deviceFunctions_CompileTest___double2uint_rn_unsigned: 'Missing definition/implementation for __double2uint_rn'
-    Unit_deviceFunctions_CompileTest___double2uint_ru_unsigned: 'Missing definition/implementation for __double2uint_ru'
-    Unit_deviceFunctions_CompileTest___double2uint_rz_unsigned: 'Missing definition/implementation for __double2uint_rz'
-    Unit_deviceFunctions_CompileTest___double2ull_rd_ulonglong: 'Missing definition/implementation for __double2ull_rd'
-    Unit_deviceFunctions_CompileTest___double2ull_rn_ulonglong: 'Missing definition/implementation for __double2ull_rn'
-    Unit_deviceFunctions_CompileTest___double2ull_ru_ulonglong: 'Missing definition/implementation for __double2ull_ru'
-    Unit_deviceFunctions_CompileTest___double2ull_rz_ulonglong: 'Missing definition/implementation for __double2ull_rz'
-    Unit_deviceFunctions_CompileTest___float2int_rd_int: 'Missing definition/implementation for __float2int_rd'
-    Unit_deviceFunctions_CompileTest___float2int_rn_int: 'Missing definition/implementation for __float2int_rn'
-    Unit_deviceFunctions_CompileTest___float2int_ru_int: 'Missing definition/implementation for __float2int_ru'
-    Unit_deviceFunctions_CompileTest___float2int_rz_int: 'Missing definition/implementation for __float2int_rz'
-    Unit_deviceFunctions_CompileTest___float2ll_rd_longlong: 'Missing definition/implementation for __float2ll_rd'
-    Unit_deviceFunctions_CompileTest___float2ll_rn_longlong: 'Missing definition/implementation for __float2ll_rn'
-    Unit_deviceFunctions_CompileTest___float2ll_ru_longlong: 'Missing definition/implementation for __float2ll_ru'
-    Unit_deviceFunctions_CompileTest___float2ll_rz_longlong: 'Missing definition/implementation for __float2ll_rz'
-    Unit_deviceFunctions_CompileTest___float2uint_rd_unsigned: 'Missing definition/implementation for __float2uint_rd'
-    Unit_deviceFunctions_CompileTest___float2uint_rn_unsigned: 'Missing definition/implementation for __float2uint_rn'
-    Unit_deviceFunctions_CompileTest___float2uint_ru_unsigned: 'Missing definition/implementation for __float2uint_ru'
-    Unit_deviceFunctions_CompileTest___float2uint_rz_unsigned: 'Missing definition/implementation for __float2uint_rz'
-    Unit_deviceFunctions_CompileTest___float2ull_rd_ulonglong: 'Missing definition/implementation for __float2ull_rd'
-    Unit_deviceFunctions_CompileTest___float2ull_rn_ulonglong: 'Missing definition/implementation for __float2ull_rn'
-    Unit_deviceFunctions_CompileTest___float2ull_ru_ulonglong: 'Missing definition/implementation for __float2ull_ry'
-    Unit_deviceFunctions_CompileTest___float2ull_rz_ulonglong: 'Missing definition/implementation for __float2ull_rz'
-    Unit_deviceFunctions_CompileTest___hiloint2double_double: 'Missing definition/implementation for __hiloint2double'
-    Unit_deviceFunctions_CompileTest___int2double_rn_double: 'Missing definition/implementation for __float2uint_rz'
-    Unit_deviceFunctions_CompileTest___int2float_rd_float: 'Missing definition/implementation for __int2float_rd'
-    Unit_deviceFunctions_CompileTest___int2float_rn_float: 'Missing definition/implementation for __int2float_rn'
-    Unit_deviceFunctions_CompileTest___int2float_ru_float: 'Missing definition/implementation for __int2float_ru'
-    Unit_deviceFunctions_CompileTest___int2float_rz_float: 'Missing definition/implementation for __int2float_rz'
-    Unit_deviceFunctions_CompileTest___ll2double_rd_double: 'Missing definition/implementation for __ll2double_rd'
-    Unit_deviceFunctions_CompileTest___ll2double_rn_double: 'Missing definition/implementation for __ll2double_rn'
-    Unit_deviceFunctions_CompileTest___ll2double_ru_double: 'Missing definition/implementation for __ll2double_ru'
-    Unit_deviceFunctions_CompileTest___ll2double_rz_double: 'Missing definition/implementation for __ll2double_rz'
-    Unit_deviceFunctions_CompileTest___ll2float_rd_float: 'Missing definition/implementation for __ll2float_rd'
-    Unit_deviceFunctions_CompileTest___ll2float_rn_float: 'Missing definition/implementation for __ll2float_rn'
-    Unit_deviceFunctions_CompileTest___ll2float_ru_float: 'Missing definition/implementation for __ll2float_ru'
-    Unit_deviceFunctions_CompileTest___ll2float_rz_float: 'Missing definition/implementation for __ll2float_rz'
-    Unit_deviceFunctions_CompileTest___uint2double_rn_double: 'Missing definition/implementation for __uint2double_rn'
-    Unit_deviceFunctions_CompileTest___uint2float_rd_float: 'Missing definition/implementation for __uint2float_rd'
-    Unit_deviceFunctions_CompileTest___uint2float_rn_float: 'Missing definition/implementation for __uint2float_rn'
-    Unit_deviceFunctions_CompileTest___uint2float_ru_float: 'Missing definition/implementation for __uint2float_ru'
-    Unit_deviceFunctions_CompileTest___uint2float_rz_float: 'Missing definition/implementation for __uint2float_rz'
-    Unit_deviceFunctions_CompileTest___ull2double_rd_double: 'Missing definition/implementation for __ull2double_rd'
-    Unit_deviceFunctions_CompileTest___ull2double_rn_double: 'Missing definition/implementation for __ull2double_rn'
-    Unit_deviceFunctions_CompileTest___ull2double_ru_double: 'Missing definition/implementation for __ull2double_ru'
-    Unit_deviceFunctions_CompileTest___ull2double_rz_double: 'Missing definition/implementation for __ull2double_rz'
-    Unit_deviceFunctions_CompileTest___ull2float_rd_float: 'Missing definition/implementation for __ull2float_rd'
-    Unit_deviceFunctions_CompileTest___ull2float_rn_float: 'Missing definition/implementation for __ull2float_rn'
-    Unit_deviceFunctions_CompileTest___ull2float_ru_float: 'Missing definition/implementation for __ull2float_ru'
-    Unit_deviceFunctions_CompileTest___ull2float_rz_float: 'Missing definition/implementation for __ull2float_rz'
     Unit_hipCreateTextureObject_ArgValidation: 'TestContext crashes during initialization because it is not properly configured to handle an Intel GPU.'
     Unit_hipCreateTextureObject_LinearResource: 'TestContext crashes during initialization because it is not properly configured to handle an Intel GPU.'
     Unit_hipCreateTextureObject_Pitch2DResource: 'TestContext crashes during initialization because it is not properly configured to handle an Intel GPU.'
@@ -272,7 +206,6 @@ ANY:
     Unit_hipMemGetInfo_ParaMultiSmall: ''
     Unit_hipMemGetInfo_ParaNonDiv: ''
     Unit_hipMemGetInfo_ParaSmall: ''
-    Unit_hipMemPrefetchAsync_NonPageSz: ''
     Unit_hipMemset2DASyncMulti: ''
     Unit_hipMemset2DAsync_MultiThread: ''
     Unit_hipMemset3DASyncMulti: ''
@@ -376,11 +309,11 @@ ANY:
     hipKernelLaunchIsNonBlocking: ''
     Unit_hipEvent: 'calling hipEventGetElapsed time on (start, start) and (stop, stop) causes subsequent call to be ready instread of hipErrorNotReady'
   OPENCL_POCL:
+    'TestRecordEventBlocking': 'pass, then pure virtual method called'
     hipDeviceMalloc: 'Either segfault or hang inside the malloc kernel'
     TestMemcpyAsyncPageable: 'Relying on timings for kernels/memory copies not reliable on CPU'
     TestStaticLibRDC: 'LLVM-16 still being tested but not recompiled to include the static library fix'
     cuda-reduction: 'timeout on LLVM16, enable to reproduce anywhere other than github runne'
-    TestRecordEventBlocking: 'Segfault in the PoCL driver with module caching on'
     Unit_ballot: ''
     BinomialOption: ''
     DCT: ''
@@ -458,7 +391,6 @@ salami:
     Unit_hipMultiThreadStreams1_AsyncSync: '' 
     Unit_hipMultiThreadStreams1_AsyncAsync: '' 
     hipMemset_Unit_hipMemsetAsync_SetMemoryWithOffset_Helgrind: '' 
-    TestRecordEventBlocking: '' 
     MatrixMultiply: '' 
     hipEvent: '' 
     shuffle: '' 
