Fix macOS build: move SPIRV-Tools find_package, add platform guards
- Move find_package(SPIRV-Tools) before add_subdirectory(spirv-extractor) so
  include directories are available when spirv-extractor is configured
- Add SPIRV-Tools homebrew prefix to CMAKE_PREFIX_PATH in CI
- Add __APPLE__ guards around malloc.h includes (macOS uses stdlib.h)
- Add __APPLE__ guards around linux/limits.h (macOS uses limits.h)
- Add environ macro for macOS (use _NSGetEnviron)
- Add memalign compatibility wrapper for macOS (use posix_memalign)
- Skip hipDeviceLink sample on macOS (llvm-objcopy doesn't support MachO for -fgpu-rdc)

--- a/.github/workflows/macos-arm64-ci.yml
+++ b/.github/workflows/macos-arm64-ci.yml
@@ -34,6 +34,10 @@ jobs:
           export CHIP_DEVICE_TYPE=pocl
           export OCL_ICD_VENDORS=/Users/paulius/install/pocl/etc/OpenCL/vendors/
           
+          # Add SPIRV-Tools from homebrew to CMAKE_PREFIX_PATH
+          export SPIRV_TOOLS_PREFIX=$(brew --prefix spirv-tools)
+          export CMAKE_PREFIX_PATH="${SPIRV_TOOLS_PREFIX}:${CMAKE_PREFIX_PATH}"
+          
           # Patch PoCL rpaths if not already done
           for lib in /Users/paulius/install/pocl/lib/libpocl.2.15.0.dylib /Users/paulius/install/pocl/lib/libpocl.2.dylib; do
             if [ -f "$lib" ]; then
