--- a/samples/hipDeviceLink/CMakeLists.txt
+++ b/samples/hipDeviceLink/CMakeLists.txt
@@ -1,15 +1,18 @@
 # Test compiling sources in RDC (relocatable device code) mode.
-add_chip_binary(
-  hipTestDeviceLink
-  hipDeviceLink.cpp
-  hipDeviceLinkRead.cpp
-  hipDeviceLinkWrite.cpp)
+# Skip on macOS because llvm-objcopy doesn't support MachO for -fgpu-rdc
+if(NOT APPLE)
+  add_chip_binary(
+    hipTestDeviceLink
+    hipDeviceLink.cpp
+    hipDeviceLinkRead.cpp
+    hipDeviceLinkWrite.cpp)
 
-target_link_libraries(hipTestDeviceLink deviceRDCInternal)
+  target_link_libraries(hipTestDeviceLink deviceRDCInternal)
 
-add_test(NAME hipTestDeviceLink
-  COMMAND ${SKIP_DOUBLE_TESTS} "${CMAKE_CURRENT_BINARY_DIR}/hipTestDeviceLink")
+  add_test(NAME hipTestDeviceLink
+    COMMAND ${SKIP_DOUBLE_TESTS} "${CMAKE_CURRENT_BINARY_DIR}/hipTestDeviceLink")
 
-set_tests_properties(hipTestDeviceLink PROPERTIES
-  PASS_REGULAR_EXPRESSION PASSED
-  SKIP_REGULAR_EXPRESSION "HIP_SKIP_THIS_TEST")
+  set_tests_properties(hipTestDeviceLink PROPERTIES
+    PASS_REGULAR_EXPRESSION PASSED
+    SKIP_REGULAR_EXPRESSION "HIP_SKIP_THIS_TEST")
+endif()
