macOS: require dynamic LLVM and document build issues
- Add FATAL_ERROR in llvm_passes/CMakeLists.txt when building on macOS
  with static LLVM, since the macOS linker requires all symbols resolved
  at link time for MODULE libraries
- Fix configure_llvm.sh quoting for LLVM_TARGETS_TO_BUILD when using
  semicolon-separated values (e.g. "host;SPIRV" for LLVM 20+)
- Add MacOS-Issues.md documenting the OpenCL version mismatch and
  LLVM pass plugin linking issues with workarounds

--- a/llvm_passes/CMakeLists.txt
+++ b/llvm_passes/CMakeLists.txt
@@ -107,8 +107,28 @@ add_library(LLVMHipPasses MODULE HipPasses.cpp
     HipVerify.cpp
     ${EXTRA_OBJS})
 
-# On macOS, MODULE libraries need explicit linking against LLVM
-if(APPLE AND LLVM_LINK_LLVM_DYLIB)
+# macOS Linking Requirements:
+# On macOS, the linker requires all symbols to be resolved at link time for
+# MODULE (plugin) libraries, unlike Linux where unresolved symbols can be
+# deferred to load time. This means we must explicitly link against LLVM.
+#
+# With dynamic LLVM (LLVM_LINK_LLVM_DYLIB=ON), we link against libLLVM.dylib.
+# With static LLVM, this is problematic because:
+#   1. Linking all static LLVM libs creates a massive plugin with duplicated code
+#   2. The 'ar' workaround above only extracts specific .o files, not all deps
+#
+# Therefore, on macOS we require LLVM to be built with shared libraries.
+# Use: ./scripts/configure_llvm.sh --link-type dynamic
+if(APPLE)
+  if(NOT LLVM_LINK_LLVM_DYLIB)
+    message(FATAL_ERROR
+      "macOS requires LLVM built with shared libraries (LLVM_LINK_LLVM_DYLIB=ON).\n"
+      "The macOS linker cannot build MODULE libraries with unresolved symbols.\n"
+      "Rebuild LLVM with: ./scripts/configure_llvm.sh --link-type dynamic\n"
+      "See MacOS-Issues.md for more details.")
+  endif()
+  
+  message(STATUS "macOS: Linking pass plugins against libLLVM.dylib")
   target_link_libraries(LLVMHipPasses PRIVATE LLVM)
   target_link_libraries(LLVMHipDynMem PRIVATE LLVM)
   target_link_libraries(LLVMHipStripUsedIntrinsics PRIVATE LLVM)
