macOS LLVM 21 support: sysroot, patches, HIPCC updates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -592,11 +592,26 @@ execute_process(COMMAND ${LLVM_CONFIG_BIN} --host-target
   OUTPUT_STRIP_TRAILING_WHITESPACE OUTPUT_VARIABLE HOST_ARCH)
 set(HOST_ARCH "--target=${HOST_ARCH}")
 
+# On macOS, we need to pass the sysroot to find system headers
+set(HIP_SYSROOT_OPTIONS "")
+if(APPLE AND CMAKE_OSX_SYSROOT)
+  set(HIP_SYSROOT_OPTIONS "--sysroot=${CMAKE_OSX_SYSROOT}")
+elseif(APPLE)
+  # Try to find SDK path automatically
+  execute_process(COMMAND xcrun --show-sdk-path
+    OUTPUT_STRIP_TRAILING_WHITESPACE OUTPUT_VARIABLE MACOS_SDK_PATH
+    RESULT_VARIABLE XCRUN_RESULT)
+  if(XCRUN_RESULT EQUAL 0 AND MACOS_SDK_PATH)
+    set(HIP_SYSROOT_OPTIONS "--sysroot=${MACOS_SDK_PATH}")
+  endif()
+endif()
+
 set(HIP_OFFLOAD_COMPILE_OPTIONS_INSTALL_
   ${HIP_ENABLE_SPIRV}
   ${HIP_OFFLOAD_COMPILE_ONLY_OPTIONS_}
   --hip-path=${CMAKE_INSTALL_PREFIX}
   ${HOST_ARCH}
+  ${HIP_SYSROOT_OPTIONS}
   ${HIP_FIXUPS_HEADER_INSTALL})
 
 set(HIP_OFFLOAD_COMPILE_OPTIONS_BUILD_
@@ -604,6 +619,7 @@ set(HIP_OFFLOAD_COMPILE_OPTIONS_BUILD_
   ${HIP_OFFLOAD_COMPILE_ONLY_OPTIONS_}
   --hip-path=${CMAKE_BINARY_DIR}
   ${HOST_ARCH}
+  ${HIP_SYSROOT_OPTIONS}
   ${HIP_FIXUPS_HEADER_BUILD}
   -I${CMAKE_SOURCE_DIR}/include
   -I${CMAKE_SOURCE_DIR}/HIP/include
@@ -615,8 +631,10 @@ set(HIP_OFFLOAD_COMPILE_OPTIONS_BUILD_
 #             combined compile and link or when the --hip-link is
 #             present at the link step.
 list(APPEND HIP_OFFLOAD_LINK_OPTIONS_INSTALL_
+  ${HIP_SYSROOT_OPTIONS}
   "-L${LIB_INSTALL_DIR}" "-lCHIP" "-no-hip-rt -locml_host_math_funcs")
 list(APPEND HIP_OFFLOAD_LINK_OPTIONS_BUILD_
+  ${HIP_SYSROOT_OPTIONS}
   "-L${CMAKE_BINARY_DIR}" "-lCHIP" "-no-hip-rt -locml_host_math_funcs")
 
 if(OpenCL_LIBRARY)
