Add test property to suppress failure regex for TestCompileError
Updated the CMake configuration for the runtime tests to clear the default failure regex for TestCompileError, which intentionally triggers a module link failure. This change ensures that the test does not falsely report a failure due to the expected error condition.

--- a/tests/runtime/CMakeLists.txt
+++ b/tests/runtime/CMakeLists.txt
@@ -73,6 +73,9 @@ add_hip_runtime_test(TestUndefKernelArg.hip)
 add_hip_runtime_test(RegressionTest302.hip)
 add_hip_runtime_test(TestLargeGlobalVar.hip)
 add_hip_runtime_test(TestCompileError.hip)
+# TestCompileError intentionally triggers ZE_RESULT_ERROR_MODULE_LINK_FAILURE
+# so we need to clear the default FAIL regex which would match "FAILURE"
+set_tests_properties(TestCompileError PROPERTIES FAIL_REGULAR_EXPRESSION "")
 add_hip_runtime_test(TestGlobalVarInit.hip)
 add_hip_runtime_test(TestArgVisitors.cpp)
 add_hip_runtime_test(TestLargeKernelArgLists.hip)
