--- a/tests/known_failures.yaml
+++ b/tests/known_failures.yaml
@@ -342,6 +342,7 @@ cupcake:
   LEVEL0_GPU:
   OPENCL_CPU:
   OPENCL_GPU:
+    hipMemset_Unit_hipMemsetAsync_SetMemoryWithOffset_Helgrind: 'Helgrind false positives from OpenCL runtime threads on B570'
   OPENCL_POCL:
 meatloaf:
   ALL:
