--- a/tests/known_failures.yaml
+++ b/tests/known_failures.yaml
@@ -343,6 +343,8 @@ cupcake:
   OPENCL_CPU:
   OPENCL_GPU:
     hipMemset_Unit_hipMemsetAsync_SetMemoryWithOffset_Helgrind: 'Helgrind false positives from OpenCL runtime threads on B570'
+    hip_sycl_interop: 'Subprocess abort on OpenCL dgpu with B570'
+    hip_sycl_interop_no_buffers: 'Subprocess abort on OpenCL dgpu with B570'
   OPENCL_POCL:
 meatloaf:
   ALL:
