Add option to enable kernel timestamps for Level Zero events
This commit introduces a new CMake option, CHIP_L0_KERNEL_TIMESTAMPS, which allows users to enable kernel timestamps for Level Zero events. The relevant changes have been made in the CMakeLists.txt and chipStarConfig.hh.in files. Additionally, the necessary conditional logic has been added in CHIPBackendLevel0.cc to utilize this option when creating event pools.

--- a/chipStarConfig.hh.in
+++ b/chipStarConfig.hh.in
@@ -53,6 +53,8 @@
 
 #cmakedefine CHIP_L0_MAKE_MEM_RESIDENT
 
+#cmakedefine CHIP_L0_KERNEL_TIMESTAMPS
+
 #cmakedefine CHIP_ERROR_IF_NOT_IMPLEMENTED
 
 #cmakedefine LLVM_TOOLS_BINARY_DIR "@LLVM_TOOLS_BINARY_DIR@"
